# Pixel_color_stabler

./: .gitignore  CleanThe_dirty.md  README.md  deep-research-report (1).md  dirty_pixel_solution.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
memory/: debug-2026-06-16-settings-defaults.md
src/: App.test.tsx  App.tsx  CanvasPreview.tsx  appConfig.ts  batch.test.ts  batch.ts  batchRuntime.test.ts  batchRuntime.ts  i18n.ts  imageProcessing.test.ts  imageProcessing.ts  labPalette.ts  styles.css  taskCleanup.test.ts  taskCleanup.ts  tauriBackend.ts  tauriExport.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pixel_color_stabler/: __init__.py  cli.py  color.py  config.py  edges.py  mask.py  metrics.py  palette.py  pipeline.py  prefilter.py
tests/: test_config.py  test_palette_pipeline.py
