[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-color-stabler"
version = "0.1.0"
description = "Reduce noisy color blocks in AI-generated images with edge-aware palette compression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
quality = [
  "opencv-python-headless>=4.9",
  "scikit-image>=0.23",
  "scikit-learn>=1.4",
  "scipy>=1.12",
]
eval = [
  "lpips",
  "torch",
  "torchvision",
]
dev = [
  "pytest>=8",
]

[project.scripts]
pixel-color-stabler = "pixel_color_stabler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pixel_color_stabler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
