[package]
name = "pixel-color-stabler"
version = "0.1.0"
description = "A desktop tool that stabilizes near-matching image colors."
authors = ["Pixel Color Stabler"]
edition = "2021"

[lib]
name = "pixel_color_stabler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
